; ModuleID = '/home/carl/AnghaBench/openssl/crypto/seed/extr_seed_ecb.c_SEED_ecb_encrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/seed/extr_seed_ecb.c_SEED_ecb_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SEED_ecb_encrypt(i8* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %4
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @SEED_encrypt(i8* %12, i8* %13, i32* %14)
  br label %21

16:                                               ; preds = %4
  %17 = load i8*, i8** %5, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @SEED_decrypt(i8* %17, i8* %18, i32* %19)
  br label %21

21:                                               ; preds = %16, %11
  ret void
}

declare dso_local i32 @SEED_encrypt(i8*, i8*, i32*) #1

declare dso_local i32 @SEED_decrypt(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
